--- a/SpringbootMongoDBPart2/order-service/pom.xml
+++ b/SpringbootMongoDBPart2/order-service/pom.xml
@@ -14,7 +14,7 @@
 	<name>order-service</name>
 	<description>Order microservice</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>15</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,6 +42,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>brij2804/mongodb-${project.artifactId}:${project.version}</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
