adding docker compose

--- a/SpringbootMongoDBPart2/customer-service/src/main/resources/application.yml
+++ b/SpringbootMongoDBPart2/customer-service/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     name: customer-service
 server:
   port: 8000
+
+customer-service:
+  mongo-server-url: mongodb://localhost:27017
+  db-name: customerdb
+  collection-name: customer
