--- a/SpringbootMongoDBPart2/customer-service/src/main/resources/application.yml
+++ b/SpringbootMongoDBPart2/customer-service/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   application:
     name: customer-service
+
 server:
   port: 8000
 
 customer-service:
-  mongo-server-url: mongodb://localhost:27017
+  mongo-server-url: mongodb://127.0.0.1:27017
   db-name: customerdb
   collection-name: customer
