updating application.yml

--- a/SpringbootMongoDBPart2/order-service/src/main/resources/application.yml
+++ b/SpringbootMongoDBPart2/order-service/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
 
 server:
     port: 8200
+
+order-service:
+  mongo-server-url: mongodb://127.0.0.1:27017
+  db-name: orderdb
+  collection-name: order
