--- a/SpringbootMongoDBPart2/inventory-service/src/main/resources/application.yml
+++ b/SpringbootMongoDBPart2/inventory-service/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
 
 server:
     port: 8100
+
+inventory-service:
+  mongo-server-url: mongodb://127.0.0.1:27017
+  db-name: inventorydb
+  collection-name: inventory
