--- a/SpringbootMongoDBPart2/pricing-service/src/main/resources/application.yml
+++ b/SpringbootMongoDBPart2/pricing-service/src/main/resources/application.yml
@@ -4,3 +4,8 @@ spring:
 
 server:
   port: 8300
+
+pricing-service:
+  mongo-server-url: mongodb://127.0.0.1:27017
+  db-name: pricingdb
+  collection-name: pricing
