--- a/SpringbootMongoDBPart2/customer-service/docker-compose/docker-compose.yml
+++ b/SpringbootMongoDBPart2/customer-service/docker-compose/docker-compose.yml
@@ -1,47 +1,40 @@
 version: '3.9'
 
 services:
-  customer-service:
-    image: brij2804/mongodb-customer-service:0.0.1-SNAPSHOT
-    mem_limit: 700m
-    ports:
-      - "8000:8000"
-    networks:
-      - project_network
-    depends_on:
-      - mongo
+  #customer-service:
+    #image: brij2804/mongodb-customer-service:0.0.1-SNAPSHOT
+    #mem_limit: 700m
+    #ports:
+      #- "8000:8000"
+    #networks:
+      #- project_network
+    #depends_on:
+      #- mongo
+    #environment:
+      #MONGODB_URI: mongodb://mongo:27017
+
   mongo:
     image: mongo:4.4.5
+    hostname: mongodbsvr
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_PASSWORD: example  
+    command:
+      - --bind_ip_all
     networks:
       - project_network
     ports:
       - "27017:27017"
     volumes:
       - mongodb:/data/db
-  mongo-express:
-    image: mongo-express:0.54.0
-    depends_on:
-      - mongo
-    ports:
-      - "8081:8081"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-    networks:
-      - project_network
-    volumes:
-      - mongodb:/data/db
-      
-#networks:
-  #project_network:
-    #external: true
 
 networks:
   project_network:
+    #ipam:
+      #config:
+        #- subnet: 192.168.65.0/28
 
 volumes:
    mongodb:
     external: true   
+      
