--- a/SpringbootMongoDBPart2/customer-service/docker-compose/docker-compose.yml
+++ b/SpringbootMongoDBPart2/customer-service/docker-compose/docker-compose.yml
@@ -1,15 +1,16 @@
 version: '3.9'
 
 services:
-  #customer-service:
-    #image: brij2804/mongodb-customer-service:0.0.1-SNAPSHOT
-    #mem_limit: 700m
-    #ports:
-      #- "8000:8000"
-    #networks:
-      #- project_network
-    #depends_on:
-      #- mongo
+
+  customer-service:
+    image: brij2804/mongodb-customer-service:0.0.1-SNAPSHOT
+    mem_limit: 700m
+    ports:
+      - "8000:8000"
+    networks:
+      - project_network
+    depends_on:
+      - mongo
     #environment:
       #MONGODB_URI: mongodb://mongo:27017
 
