--- a/SpringbootMongoDBPart2/docker-compose/docker-compose.yml
+++ b/SpringbootMongoDBPart2/docker-compose/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.9'
 
 services:
+
   shipping-service:
     image: brij2804/mongodb-shipping-service:0.0.1-SNAPSHOT
     mem_limit: 700m
@@ -53,30 +54,19 @@ services:
 
   mongo:
     image: mongo:4.4.5
+    hostname: mongodbsvr
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
     networks:
       - project_network
+    command:
+      - --bind_ip_all
     ports:
       - "27017:27017"
     volumes:
       - mongodb:/data/db
 
-  mongo-express:
-    image: mongo-express:0.54.0
-    depends_on:
-      - mongo
-    ports:
-      - "8081:8081"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-    networks:
-      - project_network
-    volumes:
-      - mongodb:/data/db
-      
 networks:
   project_network:
 
