--- a/SpringbootMongoDBPart2/inventory-service/src/main/resources/application.yml
+++ b/SpringbootMongoDBPart2/inventory-service/src/main/resources/application.yml
@@ -6,6 +6,6 @@ server:
     port: 8100
 
 inventory-service:
-  mongo-server-url: mongodb://127.0.0.1:27017
+  mongo-server-url: mongodb://root:example@127.0.0.1:27017
   db-name: inventorydb
   collection-name: inventory
