--- a/SpringbootMongoDBPart2/order-service/src/main/resources/application.yml
+++ b/SpringbootMongoDBPart2/order-service/src/main/resources/application.yml
@@ -6,6 +6,6 @@ server:
     port: 8200
 
 order-service:
-  mongo-server-url: mongodb://127.0.0.1:27017
+  mongo-server-url: mongodb://root:example@127.0.0.1:27017
   db-name: orderdb
   collection-name: order
